--- a/index.html
+++ b/index.html
@@ -38,10 +38,27 @@ button:hover{
   width:100%;
   height:100%;
   background:black;
-  background-image:radial-gradient(white 1px,transparent 1px);
-  background-size:3px 3px;
-  animation:starsMove 60s linear infinite;
+  overflow:hidden;
   z-index:-1;
+}
+
+#stars::after{
+  content:"";
+  position:absolute;
+  width:200%;
+  height:200%;
+  background:
+    radial-gradient(2px 2px at 20% 30%, white, transparent),
+    radial-gradient(1px 1px at 70% 80%, white, transparent),
+    radial-gradient(1.5px 1.5px at 40% 60%, white, transparent),
+    radial-gradient(2px 2px at 90% 10%, white, transparent),
+    radial-gradient(1px 1px at 10% 90%, white, transparent);
+  animation:starsMove 60s linear infinite;
+}
+
+@keyframes starsMove{
+  from{transform:translateY(0);}
+  to{transform:translateY(-500px);}
 }
 @keyframes starsMove{
   from{background-position:0 0;}
